test/good/dictionaries/dict07.px

Int? x

{Float?:[Bool?]} d = {x: [true]}
print d[null][0] ?? false

d = {0: [null]}
print d[0.0]
