test/bad/dictionaries/decl05.px

a = [0]
{Bool:[Float]} d = {false: [0], true: a}
